erDiagram
    CIRCLE_PARAMETER {
        uuid main_trajectory_type_parameter_id PK
    }

    DOE {
        uuid doe_id PK
        string manufacturer
        string model_name
        string serial_number
        string profile_shape
        string remarks
    }

    EIGHT_PARAMETER {
        uuid sub_trajectory_type_parameter_id PK
    }

    EXPERIMENT {
        uuid experiment_id PK
        uuid project_id FK
        datetime updated_datetime
        datetime created_datetime
        uuid galvano_system_id FK
        uuid welding_condition_id FK
        uuid experiment_material_id FK
        uuid shielding_condition_id FK
        uuid result_id FK
        uuid observation_id FK
        uuid file_id FK
        string remarks
    }

    EXPERIMENT_MATERIAL {
        uuid experiment_material_id PK
        uuid material_state_id FK
        string material_role
        string remarks
    }

    FILE {
        uuid file_id PK
        string remarks
    }

    FTHETA {
        uuid ftheta_id PK
        string manufacturer
        string model_name
        string serial_number
        float ftheta_focal_mm
        string remarks
    }

    GALVANO_SYSTEM {
        uuid galvano_system_id PK
        string galvano_type
        string serial_number
        uuid ftheta_id FK
        uuid optics_id FK
        float main_diameter_um
        float sub_diameter_um
        float oct_diameter_um
        string remarks
    }

    LASER_BEAM {
        uuid laser_beam_id PK
        string beam_type
        string wavelength_nm
        string numerical_aperture
        string m2_value
        string bpp_mm_mrad
        string core_diameter_um
        string ring_inner_diameter_um
        string ring_outer_diameter_um
        string remarks
    }

    LASER_DEVICE {
        uuid laser_device_id PK
        string manufacturer
        string model_name
        string serial_number
        string beam_structure
        uuid laser_beam_id FK
        string remarks
    }

    LINE_PARAMETER {
        uuid main_trajectory_type_parameter_id PK
        float length_mm
        string remarks
    }

    MAIN_TRAJECTORY {
        uuid main_trajectory_id PK
        uuid main_trajectory_parameter_id FK
        string main_trajectory_type
        string remarks
    }

    MATERIAL {
        uuid material_id PK
        string material_name
        string material_class
        float density_kg_m3
        float thermal_conductivity_w_mk
        float reflectivity_1070nm
        string remarks
    }

    MATERIAL_STATE {
        uuid material_state_id PK
        uuid material_id FK
        float thickness_mm
        float width_mm
        float length_mm
        string surface_condition
        string remarks
    }

    OBSERVATION {
        uuid observation_id PK
        string observer_name
        date observation_datetime
        string comment
        string remarks
    }

    OPTICS {
        uuid optics_id PK
        string manufacturer
        string optics_role
        float collimator_focal_mm
        string serial_number
        uuid laser_device_id FK
        uuid doe_id FK
        string remarks
    }

    PROJECT {
        uuid project_id PK
        string project_name
        string remarks
    }

    RASTER_PARAMETER {
        uuid sub_trajectory_type_parameter_id PK
    }

    RESULT {
        uuid result_id PK
        float oct_depth_mm
        path oct_surface_csv_path
        path oct_depth_csv_path
        path oct_result_csv_path
        float cross_section_depth_mm
        boolean spatter_flag
        float spatter_severity
        boolean crack_flag
        boolean gap_opening_flag
        float gap_opening_mm
        boolean glass_contamination
        boolean surface_contamination
        float crack_severity
        boolean penetration_flag
        boolean dissimilar_material_flag
        string remarks
    }

    SHIELDING_CONDITION {
        uuid shielding_condition_id PK
        string gas_type
        float gas_purity_percent
        float gas_flow_l_min
        float gas_pressure_kpa
        string nozzle_type
        float nozzle_diameter_mm
        float nozzle_distance_mm
        float nozzle_angle_deg
        string remarks
    }

    SPIRAL_PARAMETER {
        uuid main_trajectory_type_parameter_id PK
    }

    SUB_TRAJECTORY {
        uuid sub_trajectory_id PK
        uuid sub_trajectory_parameter_id FK
        string sub_trajectory_type
        string remarks
    }

    TRAJECTORY_SET {
        uuid trajectory_set_id PK
        uuid main_trajectory_id FK
        uuid sub_trajectory_id FK
        string trajectry_csv_path
        string trajectory_csv_path
        string remarks
    }

    WELDING_CONDITION {
        uuid welding_condition_id PK
        float main_power_w
        float sub_power_w
        float welding_speed_mm_s
        float main_focus_offset_mm
        string sub_focus_offset_mm
        uuid trajectory_set_id FK
        string remarks
    }

    WOBBLING_PARAMETER {
        uuid sub_trajectory_type_parameter_id PK
        float wobble_radius_mm
        float wobble_frequency_hz
        float circumferential_speed
        string remarks
    }

    EXPERIMENT }o--|| PROJECT : "ref"
    EXPERIMENT }o--|| GALVANO_SYSTEM : "ref"
    EXPERIMENT }o--|| WELDING_CONDITION : "ref"
    EXPERIMENT }o--|| EXPERIMENT_MATERIAL : "ref"
    EXPERIMENT }o--|| SHIELDING_CONDITION : "ref"
    EXPERIMENT }o--|| RESULT : "ref"
    EXPERIMENT }o--|| OBSERVATION : "ref"
    EXPERIMENT }o--|| FILE : "ref"
    EXPERIMENT_MATERIAL }o--|| MATERIAL_STATE : "ref"
    GALVANO_SYSTEM }o--|| FTHETA : "ref"
    GALVANO_SYSTEM }o--|| OPTICS : "ref"
    LASER_DEVICE }o--|| LASER_BEAM : "ref"
    MAIN_TRAJECTORY }o--|| CIRCLE_PARAMETER : "ref"
    MAIN_TRAJECTORY }o--|| LINE_PARAMETER : "ref"
    MAIN_TRAJECTORY }o--|| SPIRAL_PARAMETER : "ref"
    MATERIAL_STATE }o--|| MATERIAL : "ref"
    OPTICS }o--|| LASER_DEVICE : "ref"
    OPTICS }o--|| DOE : "ref"
    SUB_TRAJECTORY }o--|| EIGHT_PARAMETER : "ref"
    SUB_TRAJECTORY }o--|| RASTER_PARAMETER : "ref"
    SUB_TRAJECTORY }o--|| WOBBLING_PARAMETER : "ref"
    TRAJECTORY_SET }o--|| MAIN_TRAJECTORY : "ref"
    TRAJECTORY_SET }o--|| SUB_TRAJECTORY : "ref"
    WELDING_CONDITION }o--|| TRAJECTORY_SET : "ref"